--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ nav {
 #navbar-marchio {
     color: inherit;
     margin-top: 5px;
+    position: absolute;
 }
 
 #nav-main {
@@ -76,6 +77,7 @@ nav {
     max-width: 1400px;
     height: 50px;
     margin: 10px 6vw 10px 6vw;
+    position: relative;
 }
 
 #navbar-list {
@@ -709,6 +711,10 @@ footer {
     #nav-main {
         display: flex;
         justify-content: space-between;
+    }
+
+    #navbar-marchio {
+        position: inherit;
     }
 }
 
